perf(agent): implement Lane D performance fixes